# libs/lotchen-api/dispatching/src/rules/dtos/condition.dto.ts
@@ -1,0 +1,12 @@
+import { LogicalOperator } from '../../common/dispatch-rule.enums';
+
+export class ConditionDto {
+  operator: LogicalOperator;
+  conditions: ConditionLineDto[];
+}
+
+export class ConditionLineDto {
+  field: string;
+  operator: LogicalOperator;
+  value: string | string[];
+}
