# libs/shared/api/lotchen-client-api/src/lib/model/assigned-target.interface.ts
@@ -1,0 +1,19 @@
+/**
+ * Talisoft.Lotchen.API
+ * The Lotchen API description
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface AssignedTarget { 
+    type: string;
+    targetId: string;
+    isFallback: boolean;
+}
+
