# libs/shared/api/lotchen-client-api/src/lib/model/eligible-target-response.interface.ts
@@ -1,0 +1,31 @@
+/**
+ * Talisoft.Lotchen.API
+ * The Lotchen API description
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface EligibleTargetResponse { 
+    id: string;
+    /**
+     * AssignmentTargetType
+     */
+    type: EligibleTargetResponseTypeEnum;
+    label: string;
+    subLabel: string;
+}
+export enum EligibleTargetResponseTypeEnum {
+    Agent = 'agent',
+    Team = 'team',
+    Queue = 'queue',
+    Department = 'department'
+};
+
+
+
