# libs/shared/api/lotchen-client-api/src/lib/model/find-all-dispatch-rules-query-response.interface.ts
@@ -1,0 +1,61 @@
+/**
+ * Talisoft.Lotchen.API
+ * The Lotchen API description
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { AvailabilityConfigDto } from './availability-config-dto.interface';
+import { EscalationRuleDto } from './escalation-rule-dto.interface';
+import { AssignmentTargetDto } from './assignment-target-dto.interface';
+import { CapacityRulesDto } from './capacity-rules-dto.interface';
+import { RoutingStrategyDto } from './routing-strategy-dto.interface';
+
+
+export interface FindAllDispatchRulesQueryResponse { 
+    /**
+     * Dispatch Id
+     */
+    _id: string;
+    /**
+     * Name
+     */
+    name: string;
+    /**
+     * Description
+     */
+    description: string;
+    /**
+     * draft
+     */
+    status: FindAllDispatchRulesQueryResponseStatusEnum;
+    objectType: FindAllDispatchRulesQueryResponseObjectTypeEnum;
+    priority: number;
+    conditions?: object;
+    targets: Array<AssignmentTargetDto>;
+    routingStrategy?: RoutingStrategyDto;
+    capacityRules?: CapacityRulesDto;
+    availabilityConfig?: AvailabilityConfigDto;
+    escalationRules: Array<EscalationRuleDto>;
+    version: number;
+    versionHistory?: Array<object>;
+    updatedAt: string;
+}
+export enum FindAllDispatchRulesQueryResponseStatusEnum {
+    Draft = 'draft',
+    Active = 'active',
+    Inactive = 'inactive'
+};
+export enum FindAllDispatchRulesQueryResponseObjectTypeEnum {
+    Lead = 'lead',
+    Case = 'case',
+    Ticket = 'ticket',
+    ServiceRequest = 'service_request'
+};
+
+
+
