# libs/shared/api/lotchen-client-api/src/lib/model/models.ts
@@ -6,6 +6,7 @@ export * from './address-dto.interface';
 export * from './assign-contact-command-request.interface';
 export * from './assign-permissions-command-request.interface';
 export * from './assign-roles-command-request.interface';
+export * from './assigned-target.interface';
 export * from './assignment-target-dto.interface';
 export * from './asterisk-config-dto.interface';
 export * from './audience-filter-dto.interface';
@@ -56,6 +57,7 @@ export * from './create-user-command.interface';
 export * from './create-workflow-template-command.interface';
 export * from './created-by-info-dto.interface';
 export * from './disqualify-lead-command-request.interface';
+export * from './eligible-target-response.interface';
 export * from './enrich-lead-command-request.interface';
 export * from './escalation-rule-dto.interface';
 export * from './estimate-audience-query.interface';
@@ -73,6 +75,7 @@ export * from './find-all-call-logs-query-response.interface';
 export * from './find-all-capture-configs-query-response.interface';
 export * from './find-all-contacts-query-response.interface';
 export * from './find-all-currencies-query-response.interface';
+export * from './find-all-dispatch-rules-query-response.interface';
 export * from './find-all-event-types-query-response.interface';
 export * from './find-all-forms-query-response.interface';
 export * from './find-all-meetings-query-response.interface';
@@ -90,6 +93,7 @@ export * from './find-by-class-name-field-dto.interface';
 export * from './find-by-class-name-query-response.interface';
 export * from './find-client-by-id-query-response.interface';
 export * from './find-contact-by-id-query-response.interface';
+export * from './find-dispatch-rule-by-id-query-response.interface';
 export * from './find-event-type-by-id-query-response.interface';
 export * from './find-form-by-id-query-response.interface';
 export * from './find-lead-by-id-query-response.interface';
@@ -154,6 +158,7 @@ export * from './routing-strategy-dto.interface';
 export * from './rule-priority-item.interface';
 export * from './set-meeting-outcome-command.interface';
 export * from './simulate-dispatch-rule-command.interface';
+export * from './simulate-dispatch-rule-result.interface';
 export * from './skip-execution-step-command-request.interface';
 export * from './status-history-dto.interface';
 export * from './territories-controller-paginate-all-territories-v1200-response.interface';
