# libs/shared/api/lotchen-client-api/src/lib/model/simulate-dispatch-rule-result.interface.ts
@@ -1,0 +1,34 @@
+/**
+ * Talisoft.Lotchen.API
+ * The Lotchen API description
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { AssignedTarget } from './assigned-target.interface';
+
+
+export interface SimulateDispatchRuleResult { 
+    /**
+     * Matched
+     */
+    matched: boolean;
+    matchedRuleId: string;
+    /**
+     * Matched rule name
+     */
+    matchedRuleName: string;
+    /**
+     * Condition path
+     */
+    conditionPath: string;
+    /**
+     * 
+     */
+    assignedTarget?: AssignedTarget;
+}
+
